# ic-mockery

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
canister/: Cargo.toml  Makefile
canister/src/: lib.rs
crates/ic-mockery/: Cargo.toml
crates/ic-mockery-macro/: Cargo.toml
crates/ic-mockery-macro/src/: lib.rs
crates/ic-mockery-macro/tests/: build_test.rs
crates/ic-mockery-macro/tests/components/: basic.rs  call_result.rs
crates/ic-mockery/src/: lib.rs  mocking_support.rs
crates/ic-mockery/tests/: mocking_support_test.rs
