[package]
name = "canister"
version = "0.1.0"
edition = "2021"
authors = ["Dan B (@0xVersion)"]

resolver = "2"

[features]
ic-mockery = ["ic-mockery-macro/ic-mockery"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
getrandom = { version = "^0.2.15", features = ["custom"] }
ic-mockery-macro = { path = "../crates/ic-mockery-macro" }
