[package]
name = "ic-mockery-macro"
version = "0.1.0"
edition = "2021"
authors = ["Dan B (@0xVersion)"]
license = "MIT OR Apache-2.0"

resolver = "2"

[features]
ic-mockery = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
candid = { workspace = true }
ic-cdk = { workspace = true }

[dev-dependencies]
trybuild = "1.0.105"
