[package]
name = "ic-mockery-macro"
version = "0.1.0"
edition = "2021"
authors = ["Dan B (@0xVersion)"]
license = "MIT OR Apache-2.0"

resolver = "2"

[lints.clippy]
type_complexity = "allow"

[features]
ic-mockery = []

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = "^1.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }

[dev-dependencies]
trybuild = "1.0.105"
