[package]
name = "ic-mockery"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dan B (@0xVersion)"]
repository = "https://github.com/liquidium/ic-mockery"

resolver = "2"

[lib]
crate-type = ["rlib"]


[dependencies]
pocket-ic = "9.0.2"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
canister = { path = "../../canister" }

candid = { workspace = true }
ic-cdk = { workspace = true }
