[package]
name = "ic-mockery"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dan B (@0xVersion)"]
repository = "https://github.com/liquidium/ic-mockery"

resolver = "2"

[lib]
crate-type = ["rlib"]

[lints.clippy]
type_complexity = "allow"


[dependencies]
pocket-ic = { workspace = true }
syn = { version = "^2.0", features = ["full"] }
quote = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
thiserror = "^2.0"

canister = { path = "../../canister" }
candid = { workspace = true }
ic-cdk = { workspace = true }
